src/test/deca/syntax/invalid/decl_param/test_decl_param_with_two_types.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
// extraneous input 'a' expecting ')
// Historique:
//    cree le 01/01/2024

class A {   
    void f(public int a) {
        print("a = " + a);
    }
}
